[package]
name = "auction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "auction"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
spl-token = "3.2.0"
metaplex-token-metadata = { git = "https://github.com/metaplex-foundation/metaplex", features = [
    "no-entrypoint",
] }

